<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/mLyout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:clipChildren="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username"

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:hint="@string/username"
                android:paddingLeft="8dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_pwd"

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:hint="@string/password"
                android:paddingLeft="8dp"
                android:inputType="textPassword"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_re_pwd"

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:hint="@string/re_password"
                android:paddingLeft="8dp"
                android:inputType="textPassword"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/sp_user_type"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    >
                </Spinner>
            </LinearLayout>

            <com.nxt.zyl.ui.widget.loadingbutton.LoadingButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/agricultural_capital_btn_bg"
                app:pbLoadingText="@string/is_commit"
                app:pbProgressColor="@color/white"
                app:pbText="@string/complete"
                app:pbTextColor="@color/white"
                app:pbTextSize="16sp" />
        </LinearLayout>


    </RelativeLayout>
</LinearLayout>