<?xml version="1.0" encoding="utf-8"?><LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="fill_parent"    android:layout_height="fill_parent"    android:orientation="vertical">    <ScrollView        android:layout_width="fill_parent"        android:layout_height="fill_parent"        android:background="#ffffff"        >        <LinearLayout            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:orientation="vertical" >            <TextView                android:id="@+id/fbgqxx"                android:layout_width="fill_parent"                android:layout_height="wrap_content"                android:layout_marginLeft="30dip"                android:layout_marginTop="20dip"                android:text="@string/publishmessage"                android:textColor="#a80403"                android:textSize="18sp" />            <TextView                android:id="@+id/biaoti"                android:layout_width="fill_parent"                android:layout_height="wrap_content"                android:layout_marginLeft="35dip"                android:layout_marginTop="10dip"                android:text="@string/title"                android:textColor="@android:color/black"                android:textSize="18sp" />            <EditText                android:id="@+id/fbgq_title_edit"                android:layout_width="fill_parent"                android:layout_height="35dip"                android:layout_marginLeft="35dip"                android:layout_marginRight="35dip"                android:layout_marginTop="5dip"                android:background="@drawable/yuanjiao_selector"                android:hint="@string/please_write_title"                android:textColor="#000000" />            <LinearLayout                android:layout_width="fill_parent"                android:layout_height="wrap_content"                android:layout_marginTop="15dip"                android:gravity="center_vertical"                android:orientation="horizontal" >                <TextView                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginLeft="35dip"                    android:gravity="center"                    android:text="@string/type"                    android:textColor="@android:color/black"                    android:textSize="18sp" />                <Spinner                    android:id="@+id/fbgq_type_spinner"                    android:layout_width="match_parent"                    android:layout_height="30dip"                    android:layout_marginRight="35dip"                    android:background="@drawable/yuanjiao_selector"                    android:gravity="center" />            </LinearLayout>            <EditText                android:id="@+id/fbgq_content_edit"                android:layout_width="fill_parent"                android:layout_height="150dip"                android:layout_marginLeft="35dip"                android:layout_marginRight="35dip"                android:layout_marginTop="10dip"                android:background="@drawable/yuanjiao_selector"                android:gravity="top|left"                android:hint="@string/please_write_content"                android:textColor="#000000" />            <LinearLayout                android:id="@+id/charutupian_button"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginLeft="35dip"                android:layout_marginRight="35dp"                android:layout_marginTop="20dp"                android:gravity="center_vertical"                android:orientation="horizontal" >                <LinearLayout                    android:id="@+id/upploadphoto"                    android:layout_width="match_parent"                    android:layout_height="30dp"                    android:layout_weight="1"                    android:background="@mipmap/fbgq_bg"                    android:gravity="center"                    >                    <ImageView                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:background="@mipmap/addgreen"                        android:gravity="center" />                    <TextView                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:gravity="center"                        android:text="@string/uploadphoto"                        android:textColor="@android:color/darker_gray"                        android:textSize="15sp" />                </LinearLayout>                <ImageView                    android:id="@+id/fbgq_sl_image"                    android:layout_width="90dp"                    android:layout_height="50dp"                    android:layout_marginLeft="15dp"                    android:background="@mipmap/thumbnail"                    android:scaleType="fitXY" />            </LinearLayout>            <LinearLayout                android:layout_width="fill_parent"                android:layout_height="wrap_content"                android:layout_marginLeft="35dip"                android:layout_marginRight="35dip"                android:layout_marginTop="10dp"                android:orientation="horizontal" >                <Button                    android:id="@+id/btn_fbgq_commit"                    android:layout_width="130dp"                    android:layout_height="30dp"                    android:layout_weight="1"                    android:background="@color/redbg"                    android:scaleType="centerInside"                    android:text="@string/commit"                    android:textColor="@android:color/white"                    style="?android:attr/buttonBarButtonStyle"/>                <Button                    style="?android:attr/buttonBarButtonStyle"                    android:id="@+id/btn_reset"                    android:layout_width="130dp"                    android:layout_height="30dp"                    android:layout_marginLeft="20dp"                    android:layout_weight="1"                    android:background="@color/btn_green_noraml"                    android:scaleType="centerInside"                    android:text="@string/reset"                    android:textColor="@android:color/white" />            </LinearLayout>        </LinearLayout>    </ScrollView></LinearLayout>