<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <include layout="@layout/common_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_photo_album"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="30dp"
            android:background="@drawable/agricultural_capital_btn_bg"
            android:text="@string/choose_from_photo_album"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_take_carmera"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/agricultural_capital_btn_bg"
            android:text="@string/choose_take_carmera"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/img_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/agricultural_capital_btn_bg"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>